fix backdrop on iphone

--- a/src/components/home/Trending/index.module.css
+++ b/src/components/home/Trending/index.module.css
@@ -5,7 +5,6 @@
   border-radius: 8px;
   border: 1px solid rgba(83, 88, 97, 0.5);
   background: rgba(255, 255, 255, 0.05);
-  backdrop-filter: blur(6.150000095367432px);
   padding: 24px;
   display: flex;
   flex-direction: column;
